--- a/cooking.html
+++ b/cooking.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Kalnia:wght@100..700&display=swap" rel="stylesheet">
 
     <!-- https://favicon.io/emoji-favicons/money-bag/ -->
-    <link rel="icon" type="image/x-icon" href="/static/img/image.png">
+    <link rel="icon" type="image/x-icon" href="/img/log0 (1).jpg">
     <link href="/static/cooking.css" rel="stylesheet">
     <title>Chabab'in </title>
   </head>
@@ -38,7 +38,7 @@
 
 
         <span class="text">
-          <a href="/templates/index.html" class="button-59">الرجوع </a></span>
+          <a href="index.html" class="button-59">الرجوع </a></span>
         <span class="shimmer"></span>
 
 
@@ -46,7 +46,7 @@
 <div id="app">
 
 
-      <span class="text"> <a href="#" class="button-59">
+      <span class="text"> <a href="https://www.facebook.com/profile.php?id=61557797535319&mibextid=qi2Omg&rdid=pQK9mBhI1eovdj8r" class="button-59">
         اكتشف المزيد</a></span>
       <span class="shimmer"></span>
 
