--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- https://favicon.io/emoji-favicons/money-bag/ -->
     <link rel="icon" type="image/x-icon" href="/img/log0 (1).jpg">
-    <link href="/static/styles.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
     <title>Chabab'in </title>
   </head>
   <body>
