--- a/details.html
+++ b/details.html
@@ -14,8 +14,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- https://favicon.io/emoji-favicons/money-bag/ -->
-    <link rel="icon" type="image/x-icon" href="/static/img/image.png">
-    <link href="/static/details.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="/img/log0 (1).jpg">
+    <link href="details.css" rel="stylesheet">
     <title>Chabab'in about us</title>
   </head>
   <body>
@@ -26,7 +26,7 @@
             <div class="col-12">
               <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="/templates/index.html">CHABAB'IN</a>
+                  <a class="navbar-brand" href="/">CHABAB'IN</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
