--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- https://favicon.io/emoji-favicons/money-bag/ -->
-    <link rel="icon" type="image/x-icon" href="/img/log0 (1).jpg">
+    <link rel="icon" type="image/x-icon" href="logo.jpg">
     <link href="styles.css" rel="stylesheet">
     <title>Chabab'in </title>
   </head>
@@ -109,7 +109,7 @@
       <div class="container">
         <div class="row gy-3 gy-md-4 gy-lg-0 align-items-lg-center">
           <div class="col-12 col-lg-6 col-xl-5">
-            <img class="img-fluid rounded" loading="lazy" src="/img/memebers.jpeg" alt="About 1" style="margin: 20px;">
+            <img class="img-fluid rounded" loading="lazy" src="memebers.jpeg" alt="About 1" style="margin: 20px;">
           </div>
           <div class="col-12 col-lg-6 col-xl-7">
             <div class="row justify-content-xl-center">
@@ -144,7 +144,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="our-team">
             <div class="picture">
-              <img class="img-fluid" src="/img/memebers/m1.jpeg">
+              <img class="img-fluid" src="memebers/m1.jpeg">
             </div>
             <div class="team-content">
               <h3 class="name">قدس بوشيبا</h3>
