--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <div class="container">
         <div class="row gy-3 gy-md-4 gy-lg-0 align-items-lg-center">
           <div class="col-12 col-lg-6 col-xl-5">
-            <img class="img-fluid rounded" loading="lazy" src="memebers.jpeg" alt="About 1" style="margin: 20px;">
+            <img class="img-fluid rounded" loading="lazy" src="img/memebers.jpeg" alt="About 1" style="margin: 20px;">
           </div>
           <div class="col-12 col-lg-6 col-xl-7">
             <div class="row justify-content-xl-center">
