--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="our-team">
             <div class="picture">
-              <img class="img-fluid" src="memebers/m1.jpeg">
+              <img class="img-fluid" src="img/memebers/m1.jpeg">
             </div>
             <div class="team-content">
               <h3 class="name">قدس بوشيبا</h3>
@@ -163,7 +163,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="our-team">
             <div class="picture">
-              <img class="img-fluid" src="/img/memebers/m2.jpeg">
+              <img class="img-fluid" src="img/memebers/m2.jpeg">
             </div>
             <div class="team-content">
               <h3 class="name">درة حجيج</h3>
@@ -182,7 +182,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="our-team">
             <div class="picture">
-              <img class="img-fluid" src="/img/memebers/m3.jpeg">
+              <img class="img-fluid" src="img/memebers/m3.jpeg">
             </div>
             <div class="team-content">
               <h3 class="name">ميلامين دايموند</h3>
@@ -202,7 +202,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="our-team">
             <div class="picture">
-              <img class="img-fluid" src="/img/memebers/m4.jpeg">
+              <img class="img-fluid" src="img/memebers/m4.jpeg">
             </div>
             <div class="team-content">
               <h3 class="name">آمنة بلخيرات</h3>
@@ -218,7 +218,7 @@
         <div class=".col-6 .col-md-4">
           <div class="our-team">
             <div class="picture">
-              <img class="img-fluid" src="/img/memebers/m5.jpeg">
+              <img class="img-fluid" src="img/memebers/m5.jpeg">
             </div>
             <div class="team-content">
               <h3 class="name">محمد عمر العبيدي</h3>
