--- a/cultureHS.html
+++ b/cultureHS.html
@@ -65,7 +65,7 @@
     <h1 class="heading">المحافظات</h1>
     <div class="gallery-image">
       <div class="img-box">
-        <img src="https://picsum.photos/350/250/?image=431" alt="ben arous" />
+        <img src="region/ben arous.jpg" alt="ben arous" />
         <div class="transparent-box">
           <div class="caption">
             <p>بن عروس</p>
@@ -74,7 +74,7 @@
         </div>
       </div>
       <div class="img-box">
-        <img src="https://picsum.photos/350/250/?image=431" alt="Tunis" />
+        <img src="region/tunis.jpg" alt="Tunis" />
         <div class="transparent-box">
           <div class="caption">
             <p>تونس</p>
@@ -83,7 +83,7 @@
         </div>
       </div>
       <div class="img-box">
-        <img src="https://picsum.photos/350/250/?image=431" alt="bizert" />
+        <img src="region/bizerte.jpg" alt="bizert" />
         <div class="transparent-box">
           <div class="caption">
             <p>بنزرت</p>
@@ -92,84 +92,84 @@
         </div>
       </div>
       <div class="img-box">
-        <img src="https://picsum.photos/350/250/?image=431" alt="  nabeul" />
+        <img src="region/ariana.jpg" alt="  nabeul" />
         <div class="transparent-box">
           <div class="caption">
             <p>أريانة</p>
-            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
           </div>
         </div>
       </div>
       <div class="img-box">
-        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <img src="region/beja.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
             <p>باجة</p>
-            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
           </div>
         </div>
       </div>
       <div class="img-box">
-        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <img src="region/zaghouan.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
             <p>زغوان</p>
-            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
           </div>
         </div>
       </div>
       <div class="img-box">
-        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <img src="region/touzeur.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
             <p>توزر</p>
-            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
           </div>
         </div>
       </div>
       <div class="img-box">
-        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <img src="region/tataouine.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
             <p>تطاوين</p>
-            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
           </div>
         </div>
       </div>
       <div class="img-box">
-        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <img src="region/sousse.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
             <p>سوسة</p>
-            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
           </div>
         </div>
       </div>
       <div class="img-box">
-        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <img src="region/selyana.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
             <p>سليانة</p>
-            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
           </div>
         </div>
       </div>
       <div class="img-box">
-        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <img src="region/sidi_bouzid_سيدي_بوزيد_-_panoramio_45e663d6a4cec2.webp" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
             <p>سيدي بوزيد
             </p>
-            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
           </div>
         </div>
       </div>
       <div class="img-box">
-        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <img src="region/nabeul.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
             <p>نابل</p>
-            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
           </div>
         </div>
       </div>
@@ -178,98 +178,98 @@
         <div class="transparent-box">
           <div class="caption">
             <p>المنستير</p>
-            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
           </div>
         </div>
       </div>
       <div class="img-box">
-        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <img src="region/Mednin.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
             <p>مدنين</p>
-            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
           </div>
         </div>
       </div>
       <div class="img-box">
-        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <img src="region/manouba.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
             <p>منوبة</p>
-            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
           </div>
         </div>
       </div>
       <div class="img-box">
-        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <img src="region/mahdia.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
             <p>المهدية
             </p>
-            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
           </div>
         </div>
       </div>
       <div class="img-box">
-        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <img src="region/kef.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
             <p>الكاف</p>
-            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
           </div>
         </div>
       </div>
       <div class="img-box">
-        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <img src="region/gbeli.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
             <p>قبلي</p>
-            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
           </div>
         </div>
       </div>
       <div class="img-box">
-        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <img src="region/gasrin.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
             <p>القصرين</p>
-            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
           </div>
         </div>
       </div>
       <div class="img-box">
-        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <img src="region/kairouan.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
             <p>القيروان</p>
-            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
           </div>
         </div>
       </div>
       <div class="img-box">
-        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <img src="region/jandouba.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
             <p>جندوبة</p>
-            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
           </div>
         </div>
       </div>
       <div class="img-box">
-        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <img src="region/gafsa.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
             <p>قفصة</p>
-            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
           </div>
         </div>
       </div>
       <div class="img-box">
-        <img src="https://picsum.photos/350/250/?image=431" alt="sfax" />
+        <img src="region/gabes.jpg" alt="sfax" />
         <div class="transparent-box">
           <div class="caption">
             <p>قابس</p>
-            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
           </div>
         </div>
       </div>
