--- a/cultureHS.html
+++ b/cultureHS.html
@@ -174,7 +174,7 @@
         </div>
       </div>
       <div class="img-box">
-        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <img src="region\monastir.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
             <p>المنستير</p>
