--- a/cooking.html
+++ b/cooking.html
@@ -8,8 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Kalnia:wght@100..700&display=swap" rel="stylesheet">
 
     <!-- https://favicon.io/emoji-favicons/money-bag/ -->
-    <link rel="icon" type="image/x-icon" href="/img/log0 (1).jpg">
-    <link href="/static/cooking.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="logo.jpg">
+    <link href="cooking.css" rel="stylesheet">
     <title>Chabab'in </title>
   </head>
   <body>
