--- a/aboutus.html
+++ b/aboutus.html
@@ -64,7 +64,7 @@
       <div class="container">
         <div class="row gy-3 gy-md-4 gy-lg-0 align-items-lg-center">
           <div class="col-12 col-lg-6 col-xl-5">
-            <img class="img-fluid rounded" loading="lazy" src="/static/img/cult.jpg" alt="About 1" style="margin: 20px;">
+            <img class="img-fluid rounded" loading="lazy" src="goals.jpeg" alt="About 1" style="margin: 20px;">
           </div>
           <div class="col-12 col-lg-6 col-xl-7">
             <div class="row justify-content-xl-center">
@@ -82,15 +82,15 @@
 <div class="container" >
 
   <div class="row">
-    <h1 class="mb-3">Our roles</h1>
+    <h1 class="mb-3">أدوارنا</h1>
     <div class="col-12 col-sm-6 col-md-4 col-lg-3">
       <div class="our-team">
         <div class="picture">
-          <img class="img-fluid" src="/static/img/members/MM.jpeg">
+          <img class="img-fluid" src="img/members/m1.jpeg">
         </div>
         <div class="team-content">
-          <h3 class="name">Qods Bouchiba</h3>
-          <p> Direct Manager</p>
+          <h3 class="name">قدس بوشيبة</h3>
+          <p>مدير</p>
         </div>
 
       </div>
@@ -98,11 +98,11 @@
     <div class="col-12 col-sm-6 col-md-4 col-lg-3">
       <div class="our-team">
         <div class="picture">
-          <img class="img-fluid" src="/static/img/members/m5.jpeg">
+          <img class="img-fluid" src="img/members/m2.jpeg">
         </div>
         <div class="team-content">
-          <h3 class="name">dorra hjij</h3>
-          <p>Archive Manager</p>
+          <h3 class="name">درة حجيج</h3>
+          <p>مدير الأرشيف</p>
         </div>
 
       </div>
@@ -110,11 +110,11 @@
     <div class="col-12 col-sm-6 col-md-4 col-lg-3">
       <div class="our-team">
         <div class="picture">
-          <img class="img-fluid" src="/static/img/members/m4.jpeg">
+          <img class="img-fluid" src="img/members/m3.jpeg">
         </div>
         <div class="team-content">
-          <h3 class="name">Eya Bahri</h3>
-          <p>Human Recources</p>
+          <h3 class="name">إيا بحري</h3>
+          <p>الموارد البشرية</p>
         </div>
 
       </div>
@@ -122,11 +122,11 @@
     <div class="col-12 col-sm-6 col-md-4 col-lg-3">
       <div class="our-team">
         <div class="picture">
-          <img class="img-fluid" src="/static/img/members/m3.jpeg">
+          <img class="img-fluid" src="img/members/m4.jpeg">
         </div>
         <div class="team-content">
-          <h3 class="name">Med Ghofran Jelassi</h3>
-          <p>Custum service Manager</p>
+          <h3 class="name">آمنة بالخيرات</h3>
+          <p>المدير العام</p>
         </div>
 
       </div>
@@ -134,27 +134,16 @@
     <div class="col-6 ">
       <div class="our-team">
         <div class="picture">
-          <img class="img-fluid" src="/static/img/members/m2.jpeg">
+          <img class="img-fluid" src="img/members/m5.jpeg">
         </div>
         <div class="team-content">
-          <h3 class="name">Emna Belkhayrat</h3>
-          <p>General manager</p>
+          <h3 class="name">ميد عمر عبيدي</h3>
+          <p>مدير التسويق</p>
         </div>
 
       </div>
     </div>
-    <div class="col-6 ">
-      <div class="our-team">
-        <div class="picture">
-          <img class="img-fluid" src="/static/img/members/m1.jpeg">
-        </div>
-        <div class="team-content">
-          <h3 class="name">Med Omar Abidi</h3>
-          <p>Marketing Manager</p>
-        </div>
-
-      </div>
-    </div>
+    
   </div>
 </div>
 
