--- a/cooking.html
+++ b/cooking.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Kalnia:wght@100..700&display=swap" rel="stylesheet">
 
     <!-- https://favicon.io/emoji-favicons/money-bag/ -->
-    <link rel="icon" type="image/x-icon" href="logo.jpg">
+    <link rel="icon" type="image/x-icon" href="logo.ico">
     <link href="cooking.css" rel="stylesheet">
     <title>Chabab'in </title>
   </head>
