--- a/aboutus.html
+++ b/aboutus.html
@@ -44,9 +44,7 @@
                           <a class="nav-link" href="cultureHS.html">المنظمات الثقافية</a>
                         </li>
 
-                        <li class="nav-item">
-                          <a class="nav-link" href="#section1"> انضم إلينا</a>
-                        </li>
+                        
                       </ul>
 
                   </div>
@@ -146,6 +144,23 @@
     
   </div>
 </div>
+ <section class="py-3 py-md-5" id="section">
+      <div class="container">
+        <div class="row gy-3 gy-md-4 gy-lg-0 align-items-lg-center">
+          <div class="col-12 col-lg-6 col-xl-5">
+            <img class="img-fluid rounded" loading="lazy" src="details.jpeg" alt="About 1" style="margin: 20px;">
+          </div>
+          <div class="col-12 col-lg-6 col-xl-7">
+            <div class="row justify-content-xl-center">
+              <div class="col-12 col-xl-11">
+                <h2 class="mb-3">الخطوات</h2>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
       <!-- About Us Section -->
