--- a/aboutus.html
+++ b/aboutus.html
@@ -84,7 +84,7 @@
     <div class="col-12 col-sm-6 col-md-4 col-lg-3">
       <div class="our-team">
         <div class="picture">
-          <img class="img-fluid" src="img/members/m1.jpeg">
+          <img class="img-fluid" src="img/memebers/m1.jpeg">
         </div>
         <div class="team-content">
           <h3 class="name">قدس بوشيبة</h3>
@@ -96,7 +96,7 @@
     <div class="col-12 col-sm-6 col-md-4 col-lg-3">
       <div class="our-team">
         <div class="picture">
-          <img class="img-fluid" src="img/members/m2.jpeg">
+          <img class="img-fluid" src="img/memebers/m2.jpeg">
         </div>
         <div class="team-content">
           <h3 class="name">درة حجيج</h3>
@@ -108,7 +108,7 @@
     <div class="col-12 col-sm-6 col-md-4 col-lg-3">
       <div class="our-team">
         <div class="picture">
-          <img class="img-fluid" src="img/members/m3.jpeg">
+          <img class="img-fluid" src="img/memebers/m3.jpeg">
         </div>
         <div class="team-content">
           <h3 class="name">إيا بحري</h3>
@@ -120,7 +120,7 @@
     <div class="col-12 col-sm-6 col-md-4 col-lg-3">
       <div class="our-team">
         <div class="picture">
-          <img class="img-fluid" src="img/members/m4.jpeg">
+          <img class="img-fluid" src="img/memebers/m4.jpeg">
         </div>
         <div class="team-content">
           <h3 class="name">آمنة بالخيرات</h3>
@@ -132,7 +132,7 @@
     <div class="col-6 ">
       <div class="our-team">
         <div class="picture">
-          <img class="img-fluid" src="img/members/m5.jpeg">
+          <img class="img-fluid" src="img/memebers/m5.jpeg">
         </div>
         <div class="team-content">
           <h3 class="name">ميد عمر عبيدي</h3>
