--- a/cultureHS.html
+++ b/cultureHS.html
@@ -69,7 +69,7 @@
         <div class="transparent-box">
           <div class="caption">
             <p>بن عروس</p>
-            <p class="opacity-low"><a href="/templates/details.html">شاهد المزيد </a></p>
+            <p class="opacity-low"><a href="details.html">شاهد المزيد </a></p>
           </div>
         </div>
       </div>
@@ -78,7 +78,7 @@
         <div class="transparent-box">
           <div class="caption">
             <p>تونس</p>
-            <p class="opacity-low"><a href="/templates/details.html">شاهد المزيد  </a></p>
+            <p class="opacity-low"><a href="cooking.html">شاهد المزيد  </a></p>
           </div>
         </div>
       </div>
@@ -87,7 +87,7 @@
         <div class="transparent-box">
           <div class="caption">
             <p>بنزرت</p>
-            <p class="opacity-low"><a href="/templates/details.html">شاهد المزيد </a></p>
+            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
           </div>
         </div>
       </div>
