--- a/index.html
+++ b/index.html
@@ -285,7 +285,8 @@
       </div>
     </div>
       <div class="copyright">
-        <p>© 2024 created by Eter7 </p>
+      <p>© 2024 حقوق التأليف والنشر</p>
+
       </div>
     </footer>
     <script>
