--- a/details.html
+++ b/details.html
@@ -156,7 +156,8 @@
 
     </div>
       <div class="copyright">
-        <p>© 2024 created by Eter7 </p>
+    <p>© 2024 حقوق التأليف والنشر</p>
+
       </div>
     </footer>
     <script>
