--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
               <img class="img-fluid" src="img/memebers/m3.jpeg">
             </div>
             <div class="team-content">
-              <h3 class="name">ميلامين دايموند</h3>
+              <h3 class="name">إيا بحري</h3>
             </div>
             <ul class="social">
               <li>
