--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             </ul>
           </div>
         </div>
-        <div class=".col-6 .col-md-4">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="our-team">
             <div class="picture">
               <img class="img-fluid" src="img/memebers/m5.jpeg">
@@ -285,7 +285,7 @@
       </div>
     </div>
       <div class="copyright">
-      <p>© 2024 حقوق التأليف والنشر</p>
+      <p>© 2024 <a href="https://www.linkedin.com/in/eter-nada-9a457a2bb/" target="_blank">عمل  </a>عطر</p>
 
       </div>
     </footer>
