--- a/cultureHS.html
+++ b/cultureHS.html
@@ -69,7 +69,9 @@
         <div class="transparent-box">
           <div class="caption">
             <p>بن عروس</p>
-            <p class="opacity-low"><a href="details.html">شاهد المزيد </a></p>
+            <p class="opacity-low"><a href="details.html">دار الثقافة 
+</a></p>
+             <p class="opacity-low"><a href="details.html">دار الشباب </a></p>
           </div>
         </div>
       </div>
@@ -78,7 +80,9 @@
         <div class="transparent-box">
           <div class="caption">
             <p>تونس</p>
-            <p class="opacity-low"><a href="cooking.html">شاهد المزيد  </a></p>
+           <p class="opacity-low"><a href="cooking.html">دار الثقافة 
+</a></p>
+             <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
           </div>
         </div>
       </div>
@@ -87,7 +91,9 @@
         <div class="transparent-box">
           <div class="caption">
             <p>بنزرت</p>
-            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
+             <p class="opacity-low"><a href="cooking.html">دار الثقافة 
+</a></p>
+             <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
           </div>
         </div>
       </div>
@@ -96,7 +102,9 @@
         <div class="transparent-box">
           <div class="caption">
             <p>أريانة</p>
-            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
+            <p class="opacity-low"><a href="cooking.html">دار الثقافة 
+</a></p>
+             <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
           </div>
         </div>
       </div>
@@ -105,7 +113,9 @@
         <div class="transparent-box">
           <div class="caption">
             <p>باجة</p>
-            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
+           <p class="opacity-low"><a href="cooking.html">دار الثقافة 
+</a></p>
+             <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
           </div>
         </div>
       </div>
@@ -114,7 +124,9 @@
         <div class="transparent-box">
           <div class="caption">
             <p>زغوان</p>
-            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
+            <p class="opacity-low"><a href="cooking.html">دار الثقافة 
+</a></p>
+             <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
           </div>
         </div>
       </div>
@@ -123,7 +135,9 @@
         <div class="transparent-box">
           <div class="caption">
             <p>توزر</p>
-            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
+            <p class="opacity-low"><a href="cooking.html">دار الثقافة 
+</a></p>
+             <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
           </div>
         </div>
       </div>
@@ -132,7 +146,9 @@
         <div class="transparent-box">
           <div class="caption">
             <p>تطاوين</p>
-            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
+            <p class="opacity-low"><a href="cooking.html">دار الثقافة 
+</a></p>
+             <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
           </div>
         </div>
       </div>
@@ -141,7 +157,9 @@
         <div class="transparent-box">
           <div class="caption">
             <p>سوسة</p>
-            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
+             <p class="opacity-low"><a href="cooking.html">دار الثقافة 
+</a></p>
+             <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
           </div>
         </div>
       </div>
@@ -150,7 +168,9 @@
         <div class="transparent-box">
           <div class="caption">
             <p>سليانة</p>
-            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
+            <p class="opacity-low"><a href="cooking.html">دار الثقافة 
+</a></p>
+             <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
           </div>
         </div>
       </div>
@@ -160,7 +180,9 @@
           <div class="caption">
             <p>سيدي بوزيد
             </p>
-            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
+            <p class="opacity-low"><a href="cooking.html">دار الثقافة 
+</a></p>
+             <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
           </div>
         </div>
       </div>
@@ -169,7 +191,9 @@
         <div class="transparent-box">
           <div class="caption">
             <p>نابل</p>
-            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
+           <p class="opacity-low"><a href="cooking.html">دار الثقافة 
+</a></p>
+             <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
           </div>
         </div>
       </div>
@@ -178,7 +202,9 @@
         <div class="transparent-box">
           <div class="caption">
             <p>المنستير</p>
-            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
+             <p class="opacity-low"><a href="cooking.html">دار الثقافة 
+</a></p>
+             <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
           </div>
         </div>
       </div>
@@ -187,7 +213,9 @@
         <div class="transparent-box">
           <div class="caption">
             <p>مدنين</p>
-            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
+             <p class="opacity-low"><a href="cooking.html">دار الثقافة 
+</a></p>
+             <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
           </div>
         </div>
       </div>
@@ -196,7 +224,9 @@
         <div class="transparent-box">
           <div class="caption">
             <p>منوبة</p>
-            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
+            <p class="opacity-low"><a href="cooking.html">دار الثقافة 
+</a></p>
+             <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
           </div>
         </div>
       </div>
@@ -206,7 +236,9 @@
           <div class="caption">
             <p>المهدية
             </p>
-            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
+             <p class="opacity-low"><a href="cooking.html">دار الثقافة 
+</a></p>
+             <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
           </div>
         </div>
       </div>
@@ -215,7 +247,9 @@
         <div class="transparent-box">
           <div class="caption">
             <p>الكاف</p>
-            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
+            <p class="opacity-low"><a href="cooking.html">دار الثقافة 
+</a></p>
+             <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
           </div>
         </div>
       </div>
@@ -224,7 +258,9 @@
         <div class="transparent-box">
           <div class="caption">
             <p>قبلي</p>
-            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
+            <p class="opacity-low"><a href="cooking.html">دار الثقافة 
+</a></p>
+             <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
           </div>
         </div>
       </div>
@@ -233,7 +269,9 @@
         <div class="transparent-box">
           <div class="caption">
             <p>القصرين</p>
-            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
+            <p class="opacity-low"><a href="cooking.html">دار الثقافة 
+</a></p>
+             <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
           </div>
         </div>
       </div>
@@ -242,7 +280,9 @@
         <div class="transparent-box">
           <div class="caption">
             <p>القيروان</p>
-            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
+          <p class="opacity-low"><a href="cooking.html">دار الثقافة 
+</a></p>
+             <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
           </div>
         </div>
       </div>
@@ -251,7 +291,9 @@
         <div class="transparent-box">
           <div class="caption">
             <p>جندوبة</p>
-            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
+             <p class="opacity-low"><a href="cooking.html">دار الثقافة 
+</a></p>
+             <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
           </div>
         </div>
       </div>
@@ -260,7 +302,9 @@
         <div class="transparent-box">
           <div class="caption">
             <p>قفصة</p>
-            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
+            <p class="opacity-low"><a href="cooking.html">دار الثقافة 
+</a></p>
+             <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
           </div>
         </div>
       </div>
@@ -269,7 +313,9 @@
         <div class="transparent-box">
           <div class="caption">
             <p>قابس</p>
-            <p class="opacity-low"><a href="cooking.html">شاهد المزيد </a></p>
+             <p class="opacity-low"><a href="cooking.html">دار الثقافة 
+</a></p>
+             <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
           </div>
         </div>
       </div>
