--- a/cultureHS.html
+++ b/cultureHS.html
@@ -69,8 +69,7 @@
         <div class="transparent-box">
           <div class="caption">
             <p>بن عروس</p>
-            <p class="opacity-low"><a href="details.html">دار الثقافة 
-</a></p>
+            <p class="opacity-low"><a href="details.html">دار الثقافة </a></p>
              <p class="opacity-low"><a href="details.html">دار الشباب </a></p>
           </div>
         </div>
@@ -91,8 +90,7 @@
         <div class="transparent-box">
           <div class="caption">
             <p>بنزرت</p>
-             <p class="opacity-low"><a href="cooking.html">دار الثقافة 
-</a></p>
+             <p class="opacity-low"><a href="cooking.html">دار الثقافة </a></p>
              <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
           </div>
         </div>
