--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 align-self-center">
           <div class="our-team">
             <div class="picture">
               <img class="img-fluid" src="img/memebers/m5.jpeg">
