--- a/cultureHS.html
+++ b/cultureHS.html
@@ -78,7 +78,7 @@
         <img src="region/tunis.jpg" alt="Tunis" />
         <div class="transparent-box">
           <div class="caption">
-            <p>تونس</p>
+            <h6>تونس</h6>
            <p class="opacity-low"><a href="cooking.html">دار الثقافة 
 </a></p>
              <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
@@ -99,7 +99,7 @@
         <img src="region/ariana.jpg" alt="  nabeul" />
         <div class="transparent-box">
           <div class="caption">
-            <p>أريانة</p>
+            أريانة
             <p class="opacity-low"><a href="cooking.html">دار الثقافة 
 </a></p>
              <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
