--- a/cultureHS.html
+++ b/cultureHS.html
@@ -68,9 +68,9 @@
         <img src="region/ben arous.jpg" alt="ben arous" />
         <div class="transparent-box">
           <div class="caption">
-            <p>بن عروس</p>
-            <p class="opacity-low"><a href="details.html">دار الثقافة </a></p>
-             <p class="opacity-low"><a href="details.html">دار الشباب </a></p>
+           بن عروس
+            <p class="opacity-low"><a href="details.html">دار الثقافة </a>
+             <a href="details.html">دار الشباب </a></p>
           </div>
         </div>
       </div>
