--- a/index.html
+++ b/index.html
@@ -70,33 +70,33 @@
         <div class="container">
           <div class="row">
             <div class="col-12">
-              <nav class="navbar navbar-expand-lg bg-body-tertiary">
-                <div class="container-fluid">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                      </button>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="index.html">CHABAB'IN</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-                      <li class="nav-item">
-                        <a class="nav-link" href="aboutus.html">حولنا</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="cooking.html">الفعاليات والتكوين</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="cultureHS.html">المنظمات الثقافية</a>
-                      </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="aboutus.html">حولنا</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="cooking.html">الفعاليات والتكوين</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="cultureHS.html">المنظمات الثقافية</a>
+                    </li>
 
-                      <li class="nav-item">
-                        <a class="nav-link" href="#section1"> انضم إلينا</a>
-                      </li>
-                    </ul>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#section1"> انضم إلينا</a>
+                    </li>
+                  </ul>
 
-                  </div>
-                </div>
-              </nav>
-
+              </div>
+            </div>
+          </nav>
 
             </div>
           </div>
