--- a/aboutus.html
+++ b/aboutus.html
@@ -129,7 +129,7 @@
 
       </div>
     </div>
-    <div class="col-6 ">
+    <div class="col-12 col-sm-6 col-md-4 col-lg-3 ">
       <div class="our-team">
         <div class="picture">
           <img class="img-fluid" src="img/memebers/m5.jpeg">
