--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             </h1>
             <p><strong>للحصول على فرص أفضل.</strong></p>
 
-            <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfebOOjIXZi9m7Zs4BLq3RVcUZedkCAeliVpu_jZMh4Eab42g/viewform?embedded=true" class="button-55" target="_blank">شاهد المزيد</a></p>
+            <p><a href="https://forms.gle/XrqL2az4TyoYrbV56" class="button-55" target="_blank">شاهد المزيد</a></p>
 
           </div>
         </div>
