--- a/cultureHS.html
+++ b/cultureHS.html
@@ -46,7 +46,7 @@
                     </li>
 
                     <li class="nav-item">
-                      <a class="nav-link" href="#section1"> انضم إلينا</a>
+                      <a class="nav-link" href="https://forms.gle/XrqL2az4TyoYrbV56" target="_blank"> انضم إلينا</a>
                     </li>
                   </ul>
 
