--- a/aboutus.html
+++ b/aboutus.html
@@ -43,7 +43,9 @@
                         <li class="nav-item">
                           <a class="nav-link" href="cultureHS.html">المنظمات الثقافية</a>
                         </li>
-
+  <li class="nav-item">
+                             <a class="nav-link" href="https://forms.gle/XrqL2az4TyoYrbV56" target="_blank"> انضم إلينا</a>
+                        </li>
                         
                       </ul>
 
