--- a/cultureHS.html
+++ b/cultureHS.html
@@ -68,9 +68,11 @@
         <img src="region/ben arous.jpg" alt="ben arous" />
         <div class="transparent-box">
           <div class="caption">
-           بن عروس
-            <p class="opacity-low"><a href="details.html">دار الثقافة </a>
-             <a href="details.html">دار الشباب </a></p>
+            <h6>بن عروس </h6>
+            <p class="opacity-low">
+              <a href="details.html">دار الثقافة </a>
+             <a href="details.html">دار الشباب </a>
+            </p>
           </div>
         </div>
       </div>
@@ -89,7 +91,7 @@
         <img src="region/bizerte.jpg" alt="bizert" />
         <div class="transparent-box">
           <div class="caption">
-            <p>بنزرت</p>
+           <h6>بنزرت <h6>
              <p class="opacity-low"><a href="cooking.html">دار الثقافة </a></p>
              <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
           </div>
@@ -99,7 +101,7 @@
         <img src="region/ariana.jpg" alt="  nabeul" />
         <div class="transparent-box">
           <div class="caption">
-            أريانة
+            <h6> أريانة </h6>h6>
             <p class="opacity-low"><a href="cooking.html">دار الثقافة 
 </a></p>
              <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
@@ -110,7 +112,7 @@
         <img src="region/beja.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
-            <p>باجة</p>
+            <h6>باجة </h6>
            <p class="opacity-low"><a href="cooking.html">دار الثقافة 
 </a></p>
              <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
@@ -121,7 +123,7 @@
         <img src="region/zaghouan.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
-            <p>زغوان</p>
+             <h6>زغوان</h6>
             <p class="opacity-low"><a href="cooking.html">دار الثقافة 
 </a></p>
              <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
@@ -132,7 +134,7 @@
         <img src="region/touzeur.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
-            <p>توزر</p>
+             <h6>توزر</h6>
             <p class="opacity-low"><a href="cooking.html">دار الثقافة 
 </a></p>
              <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
@@ -143,7 +145,7 @@
         <img src="region/tataouine.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
-            <p>تطاوين</p>
+             <h6>تطاوين</h6>
             <p class="opacity-low"><a href="cooking.html">دار الثقافة 
 </a></p>
              <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
@@ -154,7 +156,7 @@
         <img src="region/sousse.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
-            <p>سوسة</p>
+            <h6>سوسة</h6>
              <p class="opacity-low"><a href="cooking.html">دار الثقافة 
 </a></p>
              <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
@@ -165,7 +167,7 @@
         <img src="region/selyana.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
-            <p>سليانة</p>
+            <h6>سليانة</h6>
             <p class="opacity-low"><a href="cooking.html">دار الثقافة 
 </a></p>
              <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
@@ -176,8 +178,8 @@
         <img src="region/sidi_bouzid_سيدي_بوزيد_-_panoramio_45e663d6a4cec2.webp" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
-            <p>سيدي بوزيد
-            </p>
+            <h6>سيدي بوزيد
+            </h6>
             <p class="opacity-low"><a href="cooking.html">دار الثقافة 
 </a></p>
              <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
