--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
 
         </div>
     </div>
-     <!--navbar-->
-    <div class="hero-anime">
+       <div class="hero-anime">
       <div class="navigation-wrap bg-light start-header start-style">
-        <div class="container">
-          <div class="row">
-            <div class="col-12">
-                  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+       <div class="container">
+        <div class="row">
+         <div class="col-12">
+
+          <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
               <a class="navbar-brand" href="index.html">CHABAB'IN</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -90,7 +90,7 @@
                     </li>
 
                     <li class="nav-item">
-                      <a class="nav-link" href="#section1"> انضم إلينا</a>
+                      <a class="nav-link" href="https://forms.gle/XrqL2az4TyoYrbV56" target="_blank"> انضم إلينا</a>
                     </li>
                   </ul>
 
@@ -98,11 +98,12 @@
             </div>
           </nav>
 
-            </div>
-          </div>
+         </div>
         </div>
+       </div>
       </div>
-       <!--navbarend-->
+     </div>
+ <!--navbar end-->
 
     <!-- About Us Section -->
     <section class="py-3 py-md-5" id="section">
