--- a/aboutus.html
+++ b/aboutus.html
@@ -21,44 +21,44 @@
   <body>
     <div class="hero-anime">
       <div class="navigation-wrap bg-light start-header start-style">
-        <div class="container">
-          <div class="row">
-            <div class="col-12">
+       <div class="container">
+        <div class="row">
+         <div class="col-12">
 
-              <nav class="navbar navbar-expand-lg bg-body-tertiary">
-                <div class="container-fluid">
-                  <a class="navbar-brand" href="index.html">CHABAB'IN</a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="index.html">CHABAB'IN</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-                        <li class="nav-item">
-                          <a class="nav-link" href="aboutus.html">حولنا</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="cooking.html">الفعاليات والتكوين</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="cultureHS.html">المنظمات الثقافية</a>
-                        </li>
-  <li class="nav-item">
-                             <a class="nav-link" href="https://forms.gle/XrqL2az4TyoYrbV56" target="_blank"> انضم إلينا</a>
-                        </li>
-                        
-                      </ul>
+                    <li class="nav-item">
+                      <a class="nav-link" href="aboutus.html">حولنا</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="cooking.html">الفعاليات والتكوين</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="cultureHS.html">المنظمات الثقافية</a>
+                    </li>
 
-                  </div>
-                </div>
-              </nav>
+                    <li class="nav-item">
+                      <a class="nav-link" href="https://forms.gle/XrqL2az4TyoYrbV56" target="_blank"> انضم إلينا</a>
+                    </li>
+                  </ul>
+
+              </div>
             </div>
-          </div>
+          </nav>
+
+         </div>
         </div>
+       </div>
       </div>
-
-
-    </div>
+     </div>
+ <!--navbar end-->
     <!-- About Us Section -->
     <section class="py-3 py-md-5" id="section">
       <div class="container">
