--- a/cultureHS.html
+++ b/cultureHS.html
@@ -69,10 +69,11 @@
         <div class="transparent-box">
           <div class="caption">
             <h6>بن عروس </h6>
-            <p class="opacity-low">
-              <a href="details.html">دار الثقافة </a>
-             <a href="details.html">دار الشباب </a>
-            </p>
+          
+             <p class="opacity-low"><a href="cooking.html">دار الثقافة 
+</a></p>
+             <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
+         
           </div>
         </div>
       </div>
@@ -101,7 +102,7 @@
         <img src="region/ariana.jpg" alt="  nabeul" />
         <div class="transparent-box">
           <div class="caption">
-            <h6> أريانة </h6>h6>
+            <h6> أريانة </h6>
             <p class="opacity-low"><a href="cooking.html">دار الثقافة 
 </a></p>
              <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
@@ -190,7 +191,7 @@
         <img src="region/nabeul.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
-            <p>نابل</p>
+            <h6>نابل</h6>
            <p class="opacity-low"><a href="cooking.html">دار الثقافة 
 </a></p>
              <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
@@ -201,7 +202,7 @@
         <img src="region\monastir.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
-            <p>المنستير</p>
+            <h6>المنستير</h6>
              <p class="opacity-low"><a href="cooking.html">دار الثقافة 
 </a></p>
              <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
@@ -212,7 +213,7 @@
         <img src="region/Mednin.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
-            <p>مدنين</p>
+            <h6>مدنين</h6>
              <p class="opacity-low"><a href="cooking.html">دار الثقافة 
 </a></p>
              <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
@@ -223,7 +224,7 @@
         <img src="region/manouba.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
-            <p>منوبة</p>
+            <h6>منوبة</h6>
             <p class="opacity-low"><a href="cooking.html">دار الثقافة 
 </a></p>
              <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
@@ -234,8 +235,8 @@
         <img src="region/mahdia.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
-            <p>المهدية
-            </p>
+            <h6>المهدية
+            </h6>
              <p class="opacity-low"><a href="cooking.html">دار الثقافة 
 </a></p>
              <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
@@ -246,7 +247,7 @@
         <img src="region/kef.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
-            <p>الكاف</p>
+            <h6>الكاف</h6>
             <p class="opacity-low"><a href="cooking.html">دار الثقافة 
 </a></p>
              <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
@@ -257,7 +258,7 @@
         <img src="region/gbeli.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
-            <p>قبلي</p>
+            <h6>قبلي</h6>
             <p class="opacity-low"><a href="cooking.html">دار الثقافة 
 </a></p>
              <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
@@ -268,7 +269,7 @@
         <img src="region/gasrin.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
-            <p>القصرين</p>
+            <h6>القصرين</h6>
             <p class="opacity-low"><a href="cooking.html">دار الثقافة 
 </a></p>
              <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
@@ -279,7 +280,7 @@
         <img src="region/kairouan.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
-            <p>القيروان</p>
+            <h6>القيروان</h6>
           <p class="opacity-low"><a href="cooking.html">دار الثقافة 
 </a></p>
              <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
@@ -290,7 +291,7 @@
         <img src="region/jandouba.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
-            <p>جندوبة</p>
+            <h6>جندوبة</h6>
              <p class="opacity-low"><a href="cooking.html">دار الثقافة 
 </a></p>
              <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
@@ -301,7 +302,7 @@
         <img src="region/gafsa.jpg" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
-            <p>قفصة</p>
+            <h6>قفصة</h6>
             <p class="opacity-low"><a href="cooking.html">دار الثقافة 
 </a></p>
              <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
@@ -312,7 +313,7 @@
         <img src="region/gabes.jpg" alt="sfax" />
         <div class="transparent-box">
           <div class="caption">
-            <p>قابس</p>
+            <h6>قابس</h6>
              <p class="opacity-low"><a href="cooking.html">دار الثقافة 
 </a></p>
              <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
