--- a/cultureHS.html
+++ b/cultureHS.html
@@ -70,7 +70,7 @@
           <div class="caption">
             <h6>بن عروس </h6>
           
-             <p class="opacity-low"><a href="cooking.html">دار الثقافة 
+             <p class="opacity-low"><a href="details.html">دار الثقافة 
 </a></p>
              <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
          
