--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               <img class="img-fluid" src="img/memebers/m1.jpeg">
             </div>
             <div class="team-content">
-              <h3 class="name">قدس بوشيبا</h3>
+              <h3 class="name">قدس بوشيبة</h3>
             </div>
             <ul class="social">
               <li>
@@ -186,7 +186,7 @@
               <img class="img-fluid" src="img/memebers/m3.jpeg">
             </div>
             <div class="team-content">
-              <h3 class="name">إيا بحري</h3>
+              <h3 class="name">آية بحري</h3>
             </div>
             <ul class="social">
               <li>
