--- a/aboutus.html
+++ b/aboutus.html
@@ -113,7 +113,7 @@
           <img class="img-fluid" src="img/memebers/m3.jpeg">
         </div>
         <div class="team-content">
-          <h3 class="name">إيا بحري</h3>
+          <h3 class="name">آية بحري</h3>
           <p>الموارد البشرية</p>
         </div>
 
